--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,19 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AddNewTodoItemActivity"
+            android:label="@string/add_new_todo_item"
+            android:theme="@style/Theme.AlertDialogPro.Material.Light" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="il.ac.huji.todolistmanager.TodoListManagerActivity" />
+        </activity>
     </application>
+
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 
 </manifest>
